2007-09-22 Marc Noirot <marc.noirot@gmail.com>
	* types.c, types.h: Removed 64 bits integers conversions.
	
	* types.c: Fixed few literal unsigned integers.

2007-09-21 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0 Release.
	
	* amf.c (amf_data_free): Fixed a memory leak on array objects.
	
	* config.h.win, configure.ac, flvdump.c, flvmeta.c:
	  Added bug report mail address.
	
	* configure.ac: Added a number of language and headers tests.
	  Marked autoconf minimum version as 2.61.
	  
	* flvmeta.c (compute_metadata): Fixed video width and height
	  injection.
	
	* Makefile.am: Removed the empty flv.c from the sources.

2007-09-20 Marc Noirot <marc.noirot@gmail.com>	
	* flv.h, flvmeta.c, flvdump.c: Added support for Screen Video
	  V2, and On2 VP6 with alpha channel.

	* flvdump.c (compute_metadata): Fixed a compilation issue
	  on MacOSX caused by a misplaced minus sign.

	* flvmeta.c (main): Added protection against giving the same
	  file as input and output.

	* flv.h, flvmeta.c: Fixed the padding in the flv_tag to better
	  reflect its role.
	
	* flvmeta.c: Made error messages more uniform.
	
	* flvmeta.c (compute_h263_size): Added Picture Start Code check.
	
	* flvdump.c (main): Suppressed a compilation warning.
	
	* Makefile.am: Added -Wall.
	
	* Makefile.am: Removed non-existant directory `doc' from EXTRA_DIST.
	
	* THANKS, TODO: Added.
	
	* AUTHORS, README, Changelog: Standard stuff.

2007-09-19 Marc Noirot <marc.noirot@gmail.com>
	This is the first public commit of FLVmeta.
	A few things need to be polished before an official release.


Copyright 2007 Marc Noirot
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.